# russ

./: .gitignore  .vercelignore  Anchor.toml  README.md  cinema.css  index.html  package.json  styles.css  vercel.json
api/: config.js
api/lobby/: [code].js
idl/: russian_roulette.json
js/: audio.js  cinema.js  config.js  contract.js  game.js  history.js  lobby-store.js  main.js  ui.js  wallet.js
programs/russian-roulette/: Cargo.toml
programs/russian-roulette/src/: lib.rs
scripts/: airdrop.bat  airdrop.ps1  deploy.ps1  serve.ps1  setup-supabase.ps1  start-game.bat
supabase/: lobbies.sql
