[package]
name = "russian-roulette"
version = "0.1.0"
description = "Solana escrow smart contract for Russian Roulette"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "russian_roulette"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
